CHATS_SIT/force-app/main/default/objects/T_CW_ADDNL_INFO__c.object
<CustomObject>
    <description>Contains information about Child Welfare Child Care cases entered by the worker</description>
    <fields>
        <fullName>CDE_PROG_AREA__c</fullName>
        <description>Program Area</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00790</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFEV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFEV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_CHATS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>CW Details</relationshipLabel>
        <relationshipName>CW_Additional_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_INTFC__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>TRAILS Case Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_REFERAL__c</fullName>
        <label>Case ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>CW Details</relationshipLabel>
        <relationshipName>T_SBSD_INDIV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_STATE__c</fullName>
        <formula>IDN_CLIENT__r.IDN_STATE__c</formula>
        <label>State ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NME_CW_WORKER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Welfare Worker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TANF_RCVNG__c</fullName>
        <description>Is this case TANF eligible?</description>
        <label>Is this case TANF eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <label>CW Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CW Additional Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CW Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Effective_End_Date_GreaterThn_Begin_Date</fullName>
        <active>false</active>
        <description>Effective End Date must be equal to or greater than the Effective Begin Date.</description>
        <errorConditionFormula>DTE_END_EFFEV__c &lt; DTE_BEGIN_EFFEV__c</errorConditionFormula>
        <errorMessage>Effective End Date must be equal to or greater than the Effective Begin Date.</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Closed_Case_Validation</fullName>
        <active>true</active>
        <description>Closed Case Validation</description>
        <errorConditionFormula>IF(IDN_CASE_CHATS__r.CLOSED_CASES_STATUS__c &gt;0, true, false)</errorConditionFormula>
        <errorMessage>Cannot update when the case is in Closed Status.</errorMessage>
    </validationRules>
</CustomObject>