CHATS_SIT/force-app/main/default/objects/T_CW_ADDNL_INFO__c/validationRules/Closed_Case_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Case_Validation</fullName>
    <active>true</active>
    <description>Closed Case Validation</description>
    <errorConditionFormula>IF(IDN_CASE_CHATS__r.CLOSED_CASES_STATUS__c &gt;0, true, false)</errorConditionFormula>
    <errorMessage>Cannot update when the case is in Closed Status.</errorMessage>
</ValidationRule>